--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,45 +1,59 @@
-<div class="row">
+<div class="container">
+ <div class="row">
     <% @weathers.each do |weather| %>
-        <div class="col-md-4">
-            <%= "#{weather.city} // #{weather.weather_forecast.weather_main}" %>
-            <%= image_tag "http://openweathermap.org/img/wn/#{weather.weather_forecast.icon}@2x.png" %>
-        </div>
-    <% end %>
-</div>
-
-<div class = "swiper-container">
-    <div class = "swiper-wrapper">
-        <div class = "swiper-slide"><div class = "box"><%= image_tag 'tanbo.jpg' %></div></div>
-        <div class = "swiper-slide"><div class = "box"><%= image_tag 'imo.jpg' %></div></div>
-        <div class = "swiper-slide"><div class = "box"><%= image_tag 'tomato.jpg' %></div></div>
+    <div class="col-md-4 col-sm-10">
+      <%= "#{weather.city} // #{weather.weather_forecast.weather_main} // #{weather.weather_forecast.temp}℃" %>
+      <%= image_tag "http://openweathermap.org/img/wn/#{weather.weather_forecast.icon}@2x.png" %>
     </div>
-    <div class = "swiper-pagination"></div>
-    <div class = "swiper-button-prev"></div>
-    <div class = "swiper-button-next"></div>
-    <div class = "swiper-scrollbar"></div>
-</div>
+    <% end %>
+ </div>
+ <div class="row">
+    <div class="col-md-7 col-sm-5">
+        <div class="swiper-container">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide"><div class="box"><%= image_tag 'tanbo.jpg' %></div></div>
+                <div class="swiper-slide"><div class="box"><%= image_tag 'imo.jpg' %></div></div>
+                <div class="swiper-slide"><div class="box"><%= image_tag 'tomato.jpg' %></div></div>
+             </div>
+             <div class="swiper-pagination"></div>
+             <div class="swiper-button-prev"></div>
+             <div class="swiper-button-next"></div>
+             <div class="swiper-scrollbar"></div>
+        </div>
+        <script>
+        var mySwiper = new Swiper('.swiper-container', {
+          autoplay: {
+          delay: 3000,
+          disableOnInteraction: true
+          },
 
-<script>
-    var mySwiper = new Swiper('.swiper-container', {
-        autoplay: {
-        delay: 3000,
-        disableOnInteraction: true
-         },
-        pagination: {
+          pagination: {
             el: '.swiper-pagination',
+          },
 
-
-        },
-
-        navigation: {
+          navigation: {
             nextEl: '.swiper-button-next',
             prevEl: '.swiper-button-prev',
+          },
 
-        },
-
-        scrollbar: {
+          scrollbar: {
             el: '.swiper-scrollbar',
+          },
+        })
+        </script>
+    </div>
 
-        },
-    })
-</script>
+    <div class="col-md-5 col-sm-4">
+        <div class="versial">
+            <h2>このサイトに訪問してくださり、</br>ありがとうございます。</h2>
+            <h4>作物を育てるたのしさをみんなで共感したい</h4>
+            そんな思いからこのサイト「つちっこ」をオープンしました。</br></br>
+            自分が育てた作物を共有したり、</br>
+            時には、育て方について質問してみたり</br>
+            同じ作物を育てている方と交流してみたり</br></br>
+            わくわくした気持ちになっていただけたら嬉しいです。
+        </div>
+    </div>
+
+ </div>
+</div>
