コメント削除機能

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -8,5 +8,42 @@ ul {
 }
 
 .size{
-  color:#ee7800; 
+  color:#ee7800;
+  font-size: 3em;
 }
+
+.sizes{
+  color:#c0c0c0;
+  font-size: 3em;
+}
+
+.versial{
+  writing-mode: vertical-rl;
+  // text-combine-upright: digi2２;
+  word-break: keep-all;
+  height: 20px;
+}
+
+.balloon {
+  position: relative;
+  display: inline-block;
+  margin: 1.5em 0;
+  padding: 7px 10px;
+  min-width: 120px;
+  max-width: 100%;
+  color: #555;
+  font-size: 16px;
+  background: #eee8aa;
+  border-radius: 15px;
+}
+
+.balloon:before {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -15px;
+  border: 15px solid transparent;
+  // border-top: 15px solid #e0edff;
+}
+
