--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,15 +1,17 @@
 <div class="container px-sm-0">
-  <div class="row">
-    <div class = "col-md-12 offset-md-1">
+  <!--<div class="row">-->
+  <!--  <div class = "col-md-12 offset-md-1">-->
       <div class = "row">
-        <div class = "col-md-1 m-4">
-          <%= image_tag 'nasubi.png',:width => '90' %>
-        </div>
-        <div class = "col-md-3 m-5">
+
+        <!--<div class = "col-md-1 sm-2 m-4">-->
+          <%#= image_tag 'nasubi.png',:width => '60' %>
+        <!--</div>-->
+        <div class = "col-md-10 sm-10 m-5 text-center">
           <h2>投稿一覧</h2>
-        </div>
-        <div class = "col-md-1 m-4">
-          <%= image_tag 'nasubi.png',:width => '90' %>
+        <!--</div>-->
+        <!--<div class = "col-md-1 sm-2 m-4">-->
+          <%#= image_tag 'nasubi.png',:width => '60' %>
+        <!--</div>-->
         </div>
         <div class="row">
           <% @posts.each do |post| %>
@@ -31,9 +33,10 @@
         <% end %>
         </div>
       </div>
-    </div>
-  </div>
-</div>
+  <!--  </div>-->
+  <!--</div>-->
+  <!--<%#= paginate @posts %>-->
+<!--</div>-->
 
 
 
