--- a/app/assets/stylesheets/diaries.scss
+++ b/app/assets/stylesheets/diaries.scss
@@ -1,3 +1,10 @@
 // Place all the styles related to the diaries controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.versial{
+  writing-mode: vertical-rl;
+  // text-combine-upright: digi2２;
+  word-break: keep-all;
+  height: 20px;
+}
