--- a/app/views/diaries/show.html.erb
+++ b/app/views/diaries/show.html.erb
@@ -1,15 +1,18 @@
+<div class = "container px-sm-0">
 <h2><%= @diary.created_at.strftime("%Y年%m月%d日") %>の日記</h2>
-<div class = "container">
-    <div class = "row">
-        <div class = "col md-4">
-            <%= attachment_image_tag @diary, :image, :fill, 300, 200, format:"jpeg" %>
-        </div>
-        <div class = "col md-5">
-            <%= @diary.title %>
-            <%= @diary.text %>
-        </div>
-    </div>
-    <div class = "row">
+ <div class = "row">
         <%= link_to "削除する",diary_path(@diary.id), method: :delete, data: {confirm: "本当に削除しますか？"}, class: "btn btn-outline-danger" %>
     </div>
+    <div class = "row">
+        <div class = "col-md-5 mt-3">
+            <%= attachment_image_tag @diary, :image, :fill, 300, 200, format:"jpeg" %>
+        </div>
+        <div class = "col-md-7">
+            <div class="versial">
+            <h4><%= @diary.title %></h4>
+            <p><%= @diary.text %></p>
+            </div>
+        </div>
+    </div>
+   
 </div>
