--- a/app/views/favorites/_favorite_button.html.erb
+++ b/app/views/favorites/_favorite_button.html.erb
@@ -1,1 +1,3 @@
-<%= link_to "", create_favorite_path(@post.id), method: :post, class: "far fa-smile", remote: :true %>
+<div class="favorite">
+ <%= link_to "", create_favorite_path(@post.id), method: :post, class: "far fa-smile sizes", remote: :true %>
+</div>
