--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,4 @@
+<%= notice %>
 <div class="container px-sm-0 mt-3">
   <div class="row">
     <div class="col-md-2 sm-1">
@@ -5,6 +6,7 @@
         </div>
       <div class="col-md-4 sm-7 d-flex align-items-center">
         <h2><%= @user.nickname %></h2>
+        <p>//<%= @user.username %></p>
         </div>
         <div class="col-md-2 d-flex align-items-center">
           <% if current_user == @user %>
@@ -13,10 +15,10 @@
           <%= render "relationships/follow_button" %>
           <% end %>
         </div>
-        
-        
+
+
         <div class="col-md-3 d-flex align-items-center">
-          
+
           <h4>フォロー：<%= @user.relationships.where(follower_id: @user.id).count %>人</br>
           フォロワー：<%= @user.relationships.where(followed_id: @user.id).count %>人</h4>
         </div>
@@ -28,21 +30,21 @@
   　 </div>
   <div class = "row">
     <div class = "col-md-6 col-sm-8 ml-4 mt-3">
-      <table class="table table-borderles rounded">
-          <tr>
-            <th>自己紹介</th>
-            <td><%= @user.introduction %></td>
-          </tr>
-          <tr>
-            <th>育てている作物</th>
-            <td><%= @user.crop %></td>
-          </tr>
-      </table>
+      <div class="ballo">
+      <ul>
+
+            <li>自己紹介:<%= @user.introduction %></li>
+
+            <li>育てている作物:<%= @user.crop %></ki>
+
+          </ul>
+
+      </div>
     </div>
     <div class="col-md-4 ml-3 mt-2">
       <% if current_user == @user %>
       <%= link_to "すべての投稿を削除する", posts_path, method: :delete,  data: {confirm: "投稿をすべて削除しますか？"}, class: "btn btn-outline-warning" %>
-      
+
       <% end %>
     </div>
   </div>
@@ -53,7 +55,7 @@
  <div class="container md-7 px-4 px-sm-0 mt-3">
    <h2>自分の投稿</h2>
   <div class = "row">
-    
+
      <% @posts.each do |post| %>
           <ul class = "post">
             <li>
