--- a/app/views/users/unsubscribe.html.erb
+++ b/app/views/users/unsubscribe.html.erb
@@ -5,7 +5,7 @@
       <p>退会すると、今までの投稿や、</p>
       <p>日記が削除されてしまいます。退会される場合は、「退会する」ボタンを選択してください。</p>
       <%= link_to "退会をやめておく", user_path(@user.id), class: "btn btn-outline-warning" %>
-      <%= link_to "退会する", user_path(@user.id), method: :delete, class: "btn btn-outline-danger" %>
+      <%= link_to "退会する", user_path(current_user.id), method: :delete, class: "btn btn-outline-danger" %>
     </div> 
   </div>
 </div>
